--- a/404.html
+++ b/404.html
@@ -8,7 +8,10 @@
 <body>
     404
     <script>
-        console.log("404")
+        setTimeout(()=>{
+            let input = window.location.pathname.slice(1);
+            window.location.href= `https://www.bing.com/search?q=${input}`;
+        }, 0.5)
     </script>
 </body>
 </html>
